--- a/about.html
+++ b/about.html
@@ -41,14 +41,23 @@
 
         gtag('config', 'G-68122XXZ2K');
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16673283702"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16673283702');
+    </script>
 </head>
 
 <body>
-     <!-- call button  -->
-     <a class="fixed-tel" href="tel:+918939456060" title="Call Now"><i class="fas fa-phone-alt"></i></a>
-     <!-- whats app button  -->
-     <a class="fixed-tel_2" href="https://wa.me/+918939456060" title="Call Now"><i class="bi bi-whatsapp"></i></a>
-     
+    <!-- call button  -->
+    <a class="fixed-tel" href="tel:+918939456060" title="Call Now"><i class="fas fa-phone-alt"></i></a>
+    <!-- whats app button  -->
+    <a class="fixed-tel_2" href="https://wa.me/+918939456060" title="Call Now"><i class="bi bi-whatsapp"></i></a>
+
     <!-- Topbar Start -->
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row py-2 px-lg-5">
@@ -114,7 +123,8 @@
                         </div>
                     </div> -->
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
-                    <a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link" class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
+                    <a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link"
+                        class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
                 </div>
                 <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
 
@@ -273,8 +283,8 @@
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
                         relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
-                       Perungudi, <br> Chennai-600096</p>
-                        <p>car parking available</p>
+                        Perungudi, <br> Chennai-600096</p>
+                    <p>car parking available</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
                         8939516060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
