--- a/gallery.html
+++ b/gallery.html
@@ -18,10 +18,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-        <!-- Font Awesome -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-        <!-- bootstrap-icons -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <!-- bootstrap-icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
@@ -40,14 +40,23 @@
 
         gtag('config', 'G-68122XXZ2K');
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16673283702"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16673283702');
+    </script>
 </head>
 
 <body>
-     <!-- call button  -->
-     <a class="fixed-tel" href="tel:+918939456060" title="Call Now"><i class="fas fa-phone-alt"></i></a>
-     <!-- whats app button  -->
-     <a class="fixed-tel_2" href="https://wa.me/+918939456060" title="Call Now"><i class="bi bi-whatsapp"></i></a>
-     
+    <!-- call button  -->
+    <a class="fixed-tel" href="tel:+918939456060" title="Call Now"><i class="fas fa-phone-alt"></i></a>
+    <!-- whats app button  -->
+    <a class="fixed-tel_2" href="https://wa.me/+918939456060" title="Call Now"><i class="bi bi-whatsapp"></i></a>
+
     <!-- Topbar Start -->
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row py-2 px-lg-5">
@@ -84,26 +93,26 @@
     <!-- Topbar End -->
 
 
-  <!-- Navbar Start -->
-  <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-        <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 text-primary"><span class="text-dark">
-                    <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
-                        alt="Stress relief massage Chennai">
-                </span> </h1>
-        </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
-            <div class="navbar-nav m-auto py-0">
-                <a href="index.html" class="nav-item nav-link ">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
-                <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
+    <!-- Navbar Start -->
+    <div class="container-fluid p-0">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
+            <a href="index.html" class="navbar-brand ml-lg-3">
+                <h1 class="m-0 text-primary"><span class="text-dark">
+                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
+                            alt="Stress relief massage Chennai">
+                    </span> </h1>
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+                <div class="navbar-nav m-auto py-0">
+                    <a href="index.html" class="nav-item nav-link ">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="service.html" class="nav-item nav-link">Services</a>
+                    <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
 
-                <!-- <div class="nav-item dropdown">
+                    <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 m-0">
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
@@ -112,14 +121,15 @@
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
                 </div> -->
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-                <a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link" class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link"
+                        class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
+                </div>
+                <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
             </div>
-            <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
-        </div>
-    </nav>
-</div>
-<!-- Navbar End -->
+        </nav>
+    </div>
+    <!-- Navbar End -->
 
 
     <!-- Header Start -->
@@ -214,8 +224,8 @@
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
                         relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
-                       Perungudi, <br> Chennai-600096</p>
-                        <p>car parking available</p>
+                        Perungudi, <br> Chennai-600096</p>
+                    <p>car parking available</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
                         8939516060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
