--- a/service.html
+++ b/service.html
@@ -39,6 +39,15 @@
 
         gtag('config', 'G-68122XXZ2K');
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16673283702"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16673283702');
+    </script>
 </head>
 
 <body>
@@ -453,8 +462,8 @@
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
                         relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
-                       Perungudi, <br> Chennai-600096</p>
-                        <p>car parking available</p>
+                        Perungudi, <br> Chennai-600096</p>
+                    <p>car parking available</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
                         8939516060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
